This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.9.2 (UNRELEASED):
-------------------
Improvements:
 * report.py, add_package_info(): Add "[origin: unknown]" tag to
   Package/Dependencies fields for non-distro package whose origin cannot be
   determined. (LP: #1148116)

2.9.1 (2013-03-07):
-------------------
Improvements:
 * launchpad.py: Add support for filing bugs as private. Document this in
   doc/crashdb-conf.txt. (LP: #1144647)

Bug fixes:
 * test_signal_crashes.py: Fix test_crash_apport() when being run under
   LD_PRELOAD.
 * Fix crash in error() and warning() if there is no sys.stderr. (LP: #1012445)
 * Fix Turkish translation to add missing keyboard accelerator. (LP: #648750)
 * fileutils.py, find_package_desktopfile(): Restrict to autostart and
   application .desktop files. (LP: #1147528)
 * apt/dpkg get_modified_files(): Fix crash when encountering non-ASCII file
   names in an ASCII locale. (LP: #1044014)

2.9 (2013-03-01):
-----------------
Improvements:
 * fileutils.py, shared_libraries(): Return a "name → path" dict instead of
   just a set of names. Thanks Kyle Nitzsche.
 * sandboxutils.py: Support unpackaged executables, i. e. reports which do not
   have "Package" and "Dependencies" fields. For those, get required libraries
   from "ProcMaps". Thanks Kyle Nitzsche.

Bug fixes:
 * Add "com.ubuntu.apport.apport-gtk-root" polkit action for running apport-gtk
   through pkexec to access system crash reports. Thanks Brian Murray.
 * ui.py: Check $PKEXEC_UID in addition to $SUDO_UID for opening a browser.
 * apport/report.py: report if LD_PRELOAD and LD_LIBRARY_PATH are set. Thanks
   James Hunt.
 * apport-valgrind: Cleanly exit on keyboard interrupts. Thanks Kyle Nitzsche.
 * debian.py: Fix "string payload expected" crash when building the report.
   Thanks Dmitry Shachnev. (Debian #698010)