@@ -282,10 +282,6 @@ try:
     # crashed process
     cwd = os.readlink('/proc/' + pid + '/cwd')
 
-    # ignore SIGQUIT (it's usually deliberately generated by users)
-    if signum == str(signal.SIGQUIT):
-        sys.exit(0)
-
     error_log('called for pid %s, signal %s, core limit %s' % (pid, signum, core_ulimit))
 
     try:
@@ -298,6 +294,12 @@ try:
     if core_ulimit > 9223372036854775807:
         error_log('ignoring implausibly big core limit, treating as unlimited')
         core_ulimit = -1
+
+    # ignore SIGQUIT (it's usually deliberately generated by users)
+    if signum == str(signal.SIGQUIT):
+        drop_privileges(pid)
+        write_user_coredump(pid, cwd, core_ulimit)
+        sys.exit(0)
 
     try:
         pidstat = os.stat('/proc/' + pid)
